# rosetta-code

./: pyproject.toml
src/challenges/: challenge_1_100_doors.py  challenge_2_24_game.py
